1.1.0
NEW
    - Added Focus and Focus target frame
    - Show cooldown at bags, character and spellbook correct by using our own cooldown system

FIXES
    - Fix partyframe layout issue
    - Petbar: You can now see if a auto cast spell is active or not

1.0.2
FIXES
    - Show mirror timers (breath/fatigue) correctly
    - Fix talentframe requirment talent linked
    - Bring back HUD Scale slider

1.0.1-TBC
FIXES
    - Fix combopoint issue while target frame is inverted and combopoints hooked on target frame
    - Player pets (hunter/warlock) can not see there stats at the hero panel
    - Fix texture issue while dead
    - Spellbook spells can now be linked into the chat or macro frame
    - Character postion for Bloodelf and Draenei is now correct

1.0.0 TBC
    Many features from retail are now in tbc, like scale frame in move hud mode, player frame in target frame style and much more