@@ -9,4 +9,6 @@
     <Script file="immersive\skins\blizzard_options.lua"/>
     <Script file="immersive\skins\macro.lua"/>
     <Script file="immersive\skins\worldmap.lua"/>
+
+    <Script file="immersive\skins\addons\gearQuipper.lua"/>
 </Ui>
