@@ -2,6 +2,8 @@
 NEW
     - Added Focus and Focus target frame
     - Show cooldown at bags, character and spellbook correct by using our own cooldown system
+    - Added GearQuipper TBC support: Thanks to Prayos for the quick support and add the GW2 compability on GearQuipper side :)
+        (https://www.curseforge.com/wow/addons/gearquipper)
 
 FIXES
     - Fix partyframe layout issue
